src/plugins/platforms/ios/quiaccessibilityelement.h
@@ -13,7 +13,6 @@
 
 @property (readonly) QAccessible::Id axid;
 
-- (instancetype)initWithId:(QAccessible::Id)anId withAccessibilityContainer:(id)view;
 + (instancetype)elementWithId:(QAccessible::Id)anId;
 
 @end
